fixed an overlap issue on sm devices. pushing to see if it also resolved the issue on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ div.extraMusic {
 }
 
 div.gutter {
-    height: 5vh;
+    height: 159px;
 }
 
 div.links {
